--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,18 @@
-tensorflow==2.2.0
+numpy==1.18.3
+sklearn==0.24.1
+Flask==1.1.1
+pickle==4.0
+pandas==0.24.2
+opencv-python==4.5.1.48
+astroid==2.4.2
+autopep8==1.5.4
+certifi==2020.12.5
+click==7.1.2
+gunicorn==20.0.4
+pycodestyle==2.6.0
+pylint==2.6.0
+toml==0.10.1
+Werkzeug==1.0.1
+wrapt==1.12.1
+isort==5.5.2
+scikit-learn==0.24.1
