--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,71 @@ Werkzeug==1.0.1
 wrapt==1.12.1
 isort==5.5.2
 scikit-learn==0.24.1
+packaging==19.0
+pandas==0.24.2
+pandocfilters==1.4.2
+parso==0.5.0
+partd==1.0.0
+path.py==12.0.1
+pathlib2==2.3.4
+patsy==0.5.1
+pbr==5.5.1
+pep8==1.7.1
+pickl==0.1.6
+pickleshare==0.7.5
+Pillow==6.1.0
+pkginfo==1.5.0.1
+pluggy==0.12.0
+ply==3.11
+prometheus-client==0.7.1
+promise==2.3
+prompt-toolkit==2.0.9
+proto-plus==1.18.1
+protobuf==3.15.6
+psutil==5.6.3
+py==1.8.0
+py-cpuinfo==7.0.0
+pyarrow==2.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+PyAutoGUI==0.9.48
+pycocotools==2.0.2
+pycodestyle==2.5.0
+pycosat==0.6.3
+pycparser==2.19
+pycrypto==2.6.1
+pycurl==7.43.0.3
+pydot==1.4.2
+pyflakes==2.1.1
+PyGetWindow==0.0.9
+Pygments==2.4.2
+pylint==2.3.1
+pymongo==3.11.3
+PyMsgBox==1.0.9
+pyodbc==4.0.26
+pyOpenSSL==19.0.0
+pyparsing==2.4.0
+pyperclip==1.8.2
+pypiwin32==223
+PyQt5-sip==12.8.1
+pyreadline==2.1
+PyRect==0.1.4
+pyrsistent==0.14.11
+PyScreeze==0.1.27
+PySocks==1.7.0
+pytest==5.0.1
+pytest-arraydiff==0.3
+pytest-astropy==0.5.0
+pytest-doctestplus==0.3.0
+pytest-openfiles==0.3.2
+pytest-remotedata==0.3.1
+python-dateutil==2.8.0
+python-slugify==4.0.1
+pyttsx3==2.90
+PyTweening==1.0.3
+pytz==2019.1
+PyWavelets==1.0.3
+pywin32==223
+pywinpty==0.5.5
+PyYAML==5.1.1
+pyzmq==18.0.0
