--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
+pywin32==227
 pywinpty==0.5.7
 pyzmq==20.0.0
 pycodestyle==2.6.0
@@ -78,3 +79,6 @@ wincertstore==0.2
 Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.4.1
+csv==1.0
+cv2==4.5.1
+pickle==4.0
