--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.0.0
 numpy==1.20.2
+opencv-python==4.5.2.52
 opencv-contrib-python==4.5.2.52
 packaging==20.9
 pandas==1.2.4
