--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-flask-opencv-streamer==1.4
 absl-py==0.12.0
 async-generator==1.10
 astroid==2.4.2
@@ -6,6 +5,7 @@ autopep8==1.5.4
 attrs==20.3.0
 backcall==0.2.0
 bleach==3.3.0
+ca-certificates==2021.4.13
 certifi==2020.12.5
 click==7.1.2
 colorama==0.4.4
@@ -28,6 +28,7 @@ jsonschema==3.2.0
 jupyter-client==6.1.12
 jupyter-core==4.7.1
 jupyterlab-pygments==0.1.2
+libsodium==1.0.18
 kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
@@ -35,17 +36,24 @@ matplotlib==3.4.1
 mccabe==0.6.1
 mediapipe==0.8.4
 mistune==0.8.4
+m2w64-gcc-libfortran==5.3.0
+m2w64-gcc-libs==5.3.0
+m2w64-gmp==6.1.0
+m2w64-libwinpthread-git==5.0.0.46
 nbclient==0.5.3
 nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.0.0
 numpy==1.20.2
+openss==1.1.1k
+flask-opencv-streamer==1.4
 opencv-python==4.5.2.52
 opencv-contrib-python==4.5.2.52
 packaging==20.9
 pandas==1.2.4
 pandocfilters==1.4.3
+pandoc==2.12
 parso==0.8.2
 pickleshare==0.7.5
 Pillow==8.2.0
@@ -57,6 +65,7 @@ pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
+pywin32==227
 pywinpty==0.5.7
 pyzmq==20.0.0
 pycodestyle==2.6.0
@@ -79,5 +88,6 @@ Werkzeug==1.0.1
 wincertstore==0.2
 Werkzeug==1.0.1
 wrapt==1.12.1
+wheel==0.36.2
 zipp==3.4.1
-
+cv2==4.5.2.52
